Resize sponsor logos, stop cutting off edges

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -605,13 +605,13 @@ section {
 }
 #supporters .supporter-logo {
   transform: scale(.8);
-  padding: 30px;
+  padding: 0px 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   background: rgba(255, 255, 255, 0.5);
-  height: 140px;
+  height: 100%;
 }
 #supporters .supporter-logo:hover img {
   transform: scale(1.2);
@@ -647,7 +647,7 @@ section {
   min-height: 160px;
   border-radius: 4px;
 }
-.img-fluid {
+.team-img {
   min-width: 140px;
   min-height: 160px;
   object-fit: cover;
